<resources>
    <string name="app_name">创艺</string>
    <string name="topic_infor">荆楚文化因楚国和楚人而得名，是周代至春秋战国时期在江汉流域兴起的一种地域文化。它主要是指以当今湖北地区为主要辐射地的古代荆楚历史文化。</string>
    <string name="topic_story">荆楚文化是华夏民族文化的重要组成部分，在中华文明发展史上地位举足轻重   。荆楚文化继承了许多商周文化特点，源远流长，博大精深，具有鲜明的地域特色和巨大的经济文化开发价值。</string>
    <string name="product_demand">荆楚文化是华夏民族文化的重要组成部分，在中华文明发展史上地位举足轻重   。荆楚文化继承了许多商周文化特点，源远流长，博大精深，具有鲜明的地域特色和巨大的经济文化开发价值。</string>
    <string name="app_version">V1.0</string>

    <string name="museum_name">湖北省博物馆</string>
    <string name="museum_infor">湖北省博物馆筹建于1953年，坐落于湖北省武汉市武昌区东湖风景区，占地面积81909平方米，建筑面积49611平方米，展厅面积13427平方米，有中国规模最大的古乐器陈列馆。</string>
    <string name="open_time">周二至周日9：00—17：00，周一闭馆（法定节假日除外）</string>
    <string name="museum_history">
        湖北省博物馆其前身是建国之初成立的湖北省人民科学馆。\n
        1953年3月16日在原科学馆的基础上，成立湖北省博物馆（筹备处），筹备处位于水陆街；同年9月，湖北省文物管理委员会与湖北省文物整理保管委员会合并成立湖北省文史研究馆，办公地址暂设武昌水陆街湖北省博物馆筹备处内。\n
        1954年4月，湖北省人民政府恢复湖北省文物管理委员会，与湖北省博物馆筹备处合署办公。\n
        1958年2月，湖北省文物管理委员会更名为湖北省文物管理处，办公地址武昌姚家岭农业展览馆内。\n
        1959年春，湖北省博物馆筹备处迁址武昌东湖风景区，湖北省政府拨款兴建省博物馆陈列展览大楼。\n
        1956年迁至武昌水果湖。\n
        1960年迁至风景秀丽的武昌东湖之滨。\n
        1963年1月正式更名为湖北省博物馆，3000平方米的陈列楼建成并对外开放。\n
        1981年，辛亥革命纪念馆从湖北省博物馆分离，成为独立的文博机构。\n
        1987年，经上级主管部门批准，湖北省博物馆“文管部”从馆内分离，成立独立的“湖北省文物考古研究所”。\n
        1999年1月，建筑面积5717平方米的编钟馆建成开放。\n
        2002年，湖北省博物馆与湖北省文物考古研究所合并。\n
        2005年12月，楚文化馆建成开放。\n
        2007年9月，新馆综合陈列馆建成开放。\n
        2009年，被国家文物局评为中地共建的国家级博物馆。\n
        2011年7月，湖北省博物馆编钟馆改造工程启动。\n
        2011年12月22日，湖北省博物馆三期扩建工程开工仪式举行。
    </string>
</resources>

